# pymatviz

./: .gitattributes  .gitignore  .pre-commit-config.yaml  changelog.md  citation.cff  codecov.yml  contributing.md  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: release.yml
.github/scripts/: check_readme_src_links.py
.github/workflows/: ci.yml  gh-pages.yml  link-check-config.json  link-check.yml  lint.yml  publish.yml  release-widget-assets.yml  release.yml  svgo.yml  test.yml
assets/: _generate_assets.py  debug.py  make_api_docs.py  ptable_heatmap_plotly.html  ptable_heatmap_plotly_custom_color_scale.html  ptable_heatmap_plotly_more_hover_data.html  ptable_heatmap_plotly_no_labels.html  ptable_heatmap_plotly_percent_labels.html  spacegroup_sunburst.html  spacegroup_sunburst_percent.html  vulture_whitelist
assets/scripts/: brillouin.py  check_readme_src_links.py  fetch_citations.py  readme.md  track_pymatviz_citations.py
data/: elem_counts_1.csv  elem_counts_2.csv  ex-ensemble-roost.csv  matbench-phonons.csv  mp-n_elements<2.csv  rand_clf.csv  rand_regr.csv  rand_tall_matrix.csv
data/structures/: mp-1170.yml  mp-1367.yml  mp-19399.yml  mp-2176.yml  mp-2201.yml  mp-22875.yml  mp-22896.yml  mp-23259.yml  mp-2490.yml  mp-2542.yml  mp-2624.yml  mp-27529.yml  mp-3834.yml  mp-406.yml  mp-4452.yml  mp-4763.yml  mp-4979.yml  mp-568662.yml  mp-661.yml  mp-9252.yml
dataset_exploration/: plot_defaults.py  readme.md
dataset_exploration/boltztrap_mp/: analyze_boltztrap_mp.py  explore_boltztrap_mp.py
dataset_exploration/camd_2022/: analyze_camd_2022.py  explore_camd_2022.py
dataset_exploration/ricci_carrier_transport/: analyze_carrier_transport.py  convert_dtype+add_strucs.py  explore_carrier_transport.py
dataset_exploration/wbm/: analyze_wbm.py  explore_wbm.py  readme.md
examples/: __init__.py  _generate_assets.py  compare_elastic_constants.py  generate_assets.py  matbench_dielectric_eda.ipynb  matbench_perovskites.ipynb  matbench_perovskites_eda.ipynb  mlff_phonons.ipynb  mlip_phonons.py  mp_bimodal_e_form.ipynb  mprester_ptable.ipynb  notebook_display.py  readme.md  smact_ptable_bars_plotly.ipynb
examples/boltztrap_mp/: explore_boltztrap_mp.py
examples/camd_2022/: explore_camd_2022.py
examples/dataset_exploration/: readme.md
examples/diatomics/: calc_mlip_diatomic_curves.py  homo-nuclear-mace-medium.json.xz  homo-nuclear-mace-small.json.lzma  mace_pair_repulsion.py  make_vasp_diatomics_inputs.py  plot.py  plot_diatomic_curves.py  plot_hetero_diatomic_curves.py  plot_homo_diatomic_curves.py
examples/make_assets/: coordination.py  correlation.py  histogram.py  parity.py  phonons.py  powerups.py  ptable.py  rainclouds.py  rdf.py  relevance.py  sankey.py  scatter.py  structure_viz.py  symmetry.py  uncertainty.py  xrd.py
examples/matbench/: list_datasets.py
examples/matpes/: 2024-10-30-MatPES-atomic-energies.csv  eda.py  matpes_eda.py
examples/phonons/: mlip_phonons.py
examples/ricci_carrier_transport/: convert_dtype+add_structs.py  explore_carrier_transport.py
examples/ward_metallic_glasses/: create_canonical_splits.py  formula_features.py  gfa_from_shallow_ml.py  plot_metrics_heatmap.py  readme.md  synthetic_non_glasses.py
examples/wbm/: explore_wbm.py
examples/widgets/: jupyter_demo.ipynb  marimo_demo.py  vscode_interactive_demo.py
ml_matrics/: __init__.py  correlation.py  cumulative.py  elements.csv  elements.py  histograms.py  metrics.py  parity.py  quantile.py  ranking.py  relevance.py  struct_vis.py  sunburst.py  utils.py
mlmatrics/: __init__.py  clf_metrics.py  correlation.py  cumulative.py  density_scatter.py  elements.py  err_decay.py  histograms.py  metrics.py  parity.py  quantile.py  ranking.py  relevance.py  std_calibration.py  utils.py
pymatviz/: __init__.py  _colors.py  _data.py  _preprocess_data.py  _tests.py  bandstructure.py  bar.py  brillouin.py  chem_env.py  colormaps.py  colors.py  coordination.py  correlation.py  cumulative.py  elements.csv  elements.py  enums.py  heatmap-testdata-enthalpy.csv  heatmap.py  histogram.py  histograms.py  io.py  keys.yml  notebook.py  parity.py  phonons.py  plot_defaults.py  powerups.py  process_data.py  ptable.py  ptable_new.py  ptable_temp_test.py  ptable_test.py  ptable_test_fraction.py  ptable_test_percentage.py  ptable_utils.py  quantile.py  rainclouds.py  ranking.py  rdf.py  (+12 more)
pymatviz/classify/: __init__.py  confusion_matrix.py  curves.py  curves_matplotlib.py  curves_plotly.py
pymatviz/cluster/: __init__.py
pymatviz/coordination/: __init__.py  figures.py  helpers.py  plotly.py
pymatviz/data/: __init__.py  regression.py
pymatviz/phonons/: __init__.py  figures.py  helpers.py  plotly.py
pymatviz/powerups/: __init__.py  both.py  matplotlib.py  plotly.py
pymatviz/ptable/: __init__.py  _process_data.py  _projector.py  figures.py  matplotlib.py  plotly.py  ptable_matplotlib.py  ptable_plotly.py
pymatviz/rdf/: __init__.py  figures.py  helpers.py  plotly.py
pymatviz/structure/: __init__.py  figures.py  helpers.py  plotly.py
scripts/: fetch_mp_compositions.py  fetch_mp_data.py  gen_rand_data.py  generate_assets.py  generate_rand_data.py  plot_all.py
site/: .gitignore  eslint.config.js  make_docs.py  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
tests/: .pytest-split-durations  __init__.py  _helpers.py  conftest.py  keys-schema.yml  test_bandstructure.py  test_bar.py  test_brillouin.py  test_chem_env.py  test_colormaps.py  test_colors.py  test_coordination.py  test_correlation.py  test_cumulative.py  test_data.py  test_density_scatter.py  test_elements.py  test_enums.py  test_heatmap.py  test_histogram.py  test_histograms.py  test_init.py  test_io.py  test_metrics.py  test_notebook.py  test_parity.py  test_phonons.py  test_pkg.py  test_powerups.py  test_preprocess_data.py  test_process_data.py  test_ptable.py  test_ptable_new.py  test_quantile.py  test_rainclouds.py  test_ranking.py  test_rdf.py  test_readme.py  test_relevance.py  test_sankey.py  (+11 more)
(+346 files in other folders)
