[metadata]
name = ml-matrics
version = 0.2.6
description = Metrics and visualizations for model performance in data-driven materials discovery
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/ml-matrics
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = machine-learning, materials-discovery, metrics, plots, visualizations, model-performance
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_data =
python_requires = >=3.8
install_requires =
    matplotlib
    numpy >= 1.21.0
    pandas
    plotly
    pymatgen
    scikit-learn
    scipy

# used during pip install .[test]
[options.extras_require]
test = pytest; pytest-cov

# map from package dir to data files that need to be included in wheel
[options.package_data]
ml_matrics = elements.csv

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[flake8]
# Use black's default line length.
max-line-length = 88
max-complexity = 19
# E731: do not assign a lambda expression, use a def
# E203: whitespace before ':'
ignore = E731, E203
per-file-ignores =
  # F401: imported but unused
  __init__.py: F401

[isort]
profile = black
lines_after_imports = 2

[tool:pytest]
testpaths = tests
# https://stackoverflow.com/a/50821160
addopts = -p no:warnings

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
