[metadata]
name = pymatviz
version = 0.5.1
description = A toolkit for visualizations in materials informatics
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/pymatviz
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = science, materials informatics, materials discovery, chemistry, data visualization, plotly, matplotlib
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_data =
python_requires = >=3.8
install_requires =
    matplotlib <= 3.6.0
    numpy >= 1.21.0
    pandas
    plotly
    pymatgen
    scikit-learn
    scipy

# used during pip install .[test]
[options.extras_require]
test = pytest; pytest-cov
# matminer is used to load matbench dataset in _generate_assets.py and
# Jupyter notebooks under examples/
data_src = matminer

# map from package dir to data files that need to be included in wheel
[options.package_data]
pymatviz = elements.csv

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = true

[flake8]
# Use black's default line length.
max-line-length = 88
# E731: do not assign a lambda expression, use a def
# E203: whitespace before ':'
ignore = E731, E203
per-file-ignores =
  # F401: imported but unused
  __init__.py: F401

[isort]
profile = black
lines_after_imports = 2

[tool:pytest]
testpaths = tests
addopts = -p no:warnings

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[mypy-tests.*]
disallow_untyped_defs = false

[codespell]
ignore-words-list = hist

[pydocstyle]
convention = google
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D107: Missing docstring in __init__
# D205: 1 blank line required between summary line and description
# D415: First line should end with ., ? or !
add-ignore = D100,D104,D107,D205,D415

[autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
expand-star-imports = true
ignore-init-module-imports = true
